add feature to play playlists